--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.91",
   "description": "Common parts of Tasenor project",
   "main": "dist/index.js",
-  "repository": "git@bitbucket.org:dataplug2/tasenor-common.git",
+  "repository": "git@github.com:dataplugoy/tasenor-common.git",
   "author": "Tommi Ronkainen <tommi.ronkainen@gmail.com>",
   "license": "UNLICENCED",
   "scripts": {
