--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "0.26.0",
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
-    "interactive-elements": "1.0.82",
+    "interactive-elements": "1.0.83",
     "jwt-decode": "^3.1.2",
     "mathjs": "^10.0.2",
     "sprintf-js": "^1.1.2",
@@ -30,11 +30,11 @@
   "devDependencies": {
     "@types/jest": "27.4.1",
     "@types/node": "^17.0.21",
-    "eslint": "7.32.0",
+    "eslint": "8.19.0",
     "eslint-config-semistandard": "^16.0.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-mocha": "10.0.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
