--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "0.26.0",
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
-    "interactive-elements": "1.0.83",
+    "interactive-elements": "1.0.84",
     "jwt-decode": "^3.1.2",
     "mathjs": "^10.0.2",
     "sprintf-js": "^1.1.2",
@@ -35,11 +35,12 @@
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-mocha": "10.0.5",
+    "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "27.5.1",
     "ts-jest": "27.1.4",
-    "typescript": "4.7.2"
+    "typescript": "4.7.3"
   }
 }
