--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "0.26.0",
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
+    "form-data": "^4.0.0",
     "interactive-elements": "1.0.84",
     "jwt-decode": "^3.1.2",
     "mathjs": "^10.0.2",
