--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "author": "Tommi Ronkainen <tommi.ronkainen@gmail.com>",
   "license": "UNLICENCED",
   "scripts": {
-    "dev": "tsc -w",
-    "start": "npm run build",
-    "build": "rm -rf dist/* && tsc",
+    "dev": "./make.js --dev --minify",
+    "build": "rm -rf dist/* && ./make.js --minify && tsc --emitDeclarationOnly",
     "test:unit": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts tests/**/*.ts",
@@ -31,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "27.4.1",
     "@types/node": "^17.0.21",
+    "esbuild": "^0.15.5",
     "eslint": "8.19.0",
     "eslint-config-semistandard": "^16.0.0",
     "eslint-config-standard": "17.0.0",
