--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "lint:fix": "eslint --fix src/**/*.ts tests/**/*.ts"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "axios": "0.26.0",
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
     "form-data": "^4.0.0",
-    "interactive-elements": "1.0.95",
+    "interactive-elements": "1.0.96",
     "jwt-decode": "^3.1.2",
     "mathjs": "^10.0.2",
     "sprintf-js": "^1.1.2",
@@ -39,17 +39,17 @@
   },
   "devDependencies": {
     "@types/jest": "27.4.1",
-    "@types/node": "^17.0.21",
+    "@types/node": "18.7.13",
     "esbuild": "^0.15.5",
-    "eslint": "8.19.0",
-    "eslint-config-semistandard": "^16.0.0",
+    "eslint": "8.23.0",
+    "eslint-config-semistandard": "17.0.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-mocha": "10.0.5",
-    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-mocha": "10.1.0",
+    "eslint-plugin-n": "15.2.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-tsdoc": "0.2.16",
     "jest": "28.1.1",
     "ts-jest": "28.0.5",
     "typescript": "4.7.4"
