--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
     "form-data": "^4.0.0",
-    "interactive-elements": "^1.0.96",
     "jwt-decode": "^3.1.2",
     "mathjs": "^10.0.2",
+    "node-stdlib-browser": "^1.2.0",
     "sprintf-js": "^1.1.2",
     "ts-opaque": "^3.0.1"
   },
