--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "devDependencies": {
     "@types/jest": "27.4.1",
-    "@types/node": "18.7.13",
-    "esbuild": "^0.15.5",
+    "@types/node": "18.11.9",
+    "esbuild": "0.15.13",
     "eslint": "8.23.0",
     "eslint-config-semistandard": "17.0.0",
     "eslint-config-standard": "17.0.0",
