--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-tsdoc": "0.2.16",
+    "typescript": "4.7.4",
     "jest": "28.1.1",
-    "ts-jest": "28.0.5",
-    "typescript": "4.7.4"
+    "ts-jest": "28.0.5"
   }
 }
