--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "lint:fix": "eslint --fix src/**/*.ts tests/**/*.ts"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.35.1",
-    "@typescript-eslint/parser": "5.35.1",
     "axios": "0.26.0",
     "clone": "^2.1.2",
     "dayjs": "1.10.8",
@@ -38,20 +36,22 @@
     "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "29.4.0",
-    "@types/node": "18.11.9",
-    "esbuild": "0.15.13",
-    "eslint": "8.23.0",
-    "eslint-config-semistandard": "17.0.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-mocha": "10.1.0",
-    "eslint-plugin-n": "15.5.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "esbuild": "^0.18.10",
+    "eslint": "^8.43.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "6.0.1",
-    "eslint-plugin-tsdoc": "0.2.16",
-    "jest": "29.4.2",
-    "ts-jest": "29.0.5",
-    "typescript": "4.9.4"
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "5.0"
   }
 }
